--- a/src/playme/roles/cat-mwa/tasks/setup-security.yml
+++ b/src/playme/roles/cat-mwa/tasks/setup-security.yml
@@ -22,6 +22,6 @@
   become: yes
 
 - name: Load firewall
-  command: /etc/iptables-rules
+  command: bash /etc/iptables-rules
   register: firewall_result
   failed_when: "'FAILED' in firewall_result.stderr"
